<resources>
    <string name="app_name">Programmer_Calculator_Task</string>
    <string name="title">Number System</string>
    <string name="decimal_operation">Decimal</string>
    <string name="clearButton">Clear</string>
    <string name="hexadecimal_operation">Hexadecimal</string>
    <string name="binary_operation">Binary</string>
    <string name="octal_operation">Octal</string>
    <string name="convert">convert</string>
</resources>