<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingStart="@dimen/paddingStartBackground"
    android:paddingEnd="@dimen/paddingEndBackground"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/largeMargin"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:text="@string/title"
        android:textAllCaps="true"
        android:textColor="#BB000000"
        android:textSize="@dimen/textsizeTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/decimalNum"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/largeMargin"
        android:hint="@string/decimal_operation"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789"
            android:inputType="number"
            android:lines="1"
            android:maxLength="10" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/binaryNum"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normalMargin"
        android:hint="@string/binary_operation"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/decimalNum">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputBinary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="01"
            android:inputType="number"
            android:lines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/octalNum"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normalMargin"
        android:hint="@string/octal_operation"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/binaryNum">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputOctal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="01234567"
            android:inputType="number"
            android:lines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/hexadecimalNum"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normalMargin"
        android:hint="@string/hexadecimal_operation"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/octalNum">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputHexadecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789abcdefABCDEF"
            android:lines="1" />
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnClearInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/largeMargin"
        android:background="@drawable/btn_design"
        android:fontFamily="@font/roboto"
        android:text="@string/clearButton"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/textsizeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hexadecimalNum" />


</androidx.constraintlayout.widget.ConstraintLayout>